welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini = false) {
            ^BDRBuggle:14: error: not found: value I
		if (lettre == I) {
                              ^BDRBuggle:19: error: not found: value A
		if (lettre == A) {
                              ^BDRBuggle:22: error: not found: value B
		if (lettre == B ) {
                              ^BDRBuggle:26: error: not found: value C
		if (lettre == C){
                              ^BDRBuggle:31: error: not found: value Z
		if (lettre == Z) {
                              ^BDRBuggle:34: error: not found: value Y
		if (lettre == Y) {
                              ^BDRBuggle:38: error: not found: value X
		if (lettre == X) {
                              ^